# cs239-hci-proj

./: .gitignore  README.md  design-goals.MD  pyproject.toml
core-assignments/: design-goals.md
core-assignments/evaluation/: README.md
core-assignments/pilot-eval/: pilot_eval.MD
images/: README.md
src/: app.py  complexity_analyzer.py  helpers.py  main.py  message_parser.py  model.py  thought_params.py
src/components/keyup/: package-lock.json  package.json
user-research/: README.md
